--- a/app/src/main/res/layout/activity_add_bike.xml
+++ b/app/src/main/res/layout/activity_add_bike.xml
@@ -1,89 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+                name="viewModel"
+                type="app.igormatos.botaprarodar.presentation.addbicycle.AddBikeViewModel" />
+    </data>
+
+    <ScrollView
             android:id="@+id/containerAddBike"
             android:layout_width="match_parent"
-            tools:context=".presentation.addbicycle.AddBikeActivity"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:context=".presentation.addbicycle.AddBikeActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appBarLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.AppBarOverlay"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    app:title="@string/add_user_title"
+            <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/appBarLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:titleTextColor="@color/dark_gray"
-                    android:background="@color/white"/>
+                    android:layout_height="wrap_content"
+                    android:theme="@style/AppTheme.AppBarOverlay"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-        </com.google.android.material.appbar.AppBarLayout>
+                <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="@color/white"
+                        app:title="@string/add_user_title"
+                        app:titleTextColor="@color/dark_gray" />
 
-        <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                app:layout_constraintTop_toBottomOf="@id/appBarLayout" android:layout_marginTop="16dp"
-                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/progressBar" android:visibility="gone"/>
+            </com.google.android.material.appbar.AppBarLayout>
 
-        <ImageView android:id="@+id/bikePhotoImageView" android:layout_width="match_parent"
-                   android:layout_height="250dp"
-                   android:layout_marginLeft="16dp"
-                   android:layout_marginRight="16dp"
-                   app:layout_constraintTop_toBottomOf="@id/progressBar" android:layout_marginTop="16dp"
-                   android:padding="64dp"
-                   app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-                   android:background="@color/grey" tools:srcCompat="@drawable/ic_image"
-                   android:scaleType="centerCrop"/>
+            <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:indeterminate="true"
+                    android:visibility="gone"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
-        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
-                  app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView"
-                  android:id="@+id/serieNumber"
-                  android:hint="Número de série da bicicleta"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintLeft_toLeftOf="@id/bikePhotoImageView"/>
+            <ImageView
+                    android:id="@+id/bikePhotoImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@color/grey"
+                    android:padding="64dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/progressBar"
+                    tools:srcCompat="@drawable/ic_image" />
 
-        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
-                  app:layout_constraintTop_toBottomOf="@id/serieNumber"
-                  android:hint="Nome da bicicleta"
-                  android:id="@+id/bikeName"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  android:layout_marginLeft="16dp"
-        />
+            <EditText
+                    android:id="@+id/serieNumber"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:hint="Número de série da bicicleta"
+                    app:layout_constraintLeft_toLeftOf="@id/bikePhotoImageView"
+                    app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView" />
 
-
-        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
-                  app:layout_constraintTop_toBottomOf="@id/bikeName"
-                  android:hint="Número de ordem"
-                  android:inputType="number"
-                  android:id="@+id/orderNumber"
-                  android:layout_marginTop="8dp"
-                  android:layout_marginLeft="16dp"
-                  app:layout_constraintLeft_toLeftOf="parent"
-        />
-        <Button
-                android:text="Cadastrar Bicicleta"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/saveButton" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/orderNumber" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+            <EditText
+                    android:id="@+id/bikeName"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="8dp"
+                    android:hint="Nome da bicicleta"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/serieNumber" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <EditText
+                    android:id="@+id/orderNumber"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="8dp"
+                    android:hint="Número de ordem"
+                    android:inputType="number"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/bikeName" />
+
+            <Button
+                    android:id="@+id/saveButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="Cadastrar Bicicleta"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/orderNumber" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
