--- a/app/src/main/res/layout/activity_bike_form.xml
+++ b/app/src/main/res/layout/activity_bike_form.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
                 name="viewModel"
                 type="app.igormatos.botaprarodar.presentation.addbicycle.BikeFormViewModel" />
@@ -65,14 +66,29 @@
                     app:layout_constraintTop_toBottomOf="@id/progressBar"
                     tools:srcCompat="@drawable/ic_image" />
 
-            <EditText
-                    android:id="@+id/serieNumber"
-                    android:layout_width="250dp"
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/serialNumberTil"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="@dimen/margin_medium"
+                    android:layout_marginLeft="@dimen/margin_medium"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:layout_marginEnd="@dimen/margin_medium"
+                    android:layout_marginRight="@dimen/margin_medium"
                     android:hint="Número de série da bicicleta"
+                    app:errorBicycleSerialNumber="@{viewModel.serialNumber}"
                     app:layout_constraintLeft_toLeftOf="@id/bikePhotoImageView"
-                    app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView" />
+                    app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView">
+
+                <EditText
+                        android:id="@+id/serialNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@={viewModel.serialNumber}"
+                        />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
                     android:id="@+id/bikeName"
@@ -82,7 +98,7 @@
                     android:layout_marginTop="8dp"
                     android:hint="Nome da bicicleta"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/serieNumber" />
+                    app:layout_constraintTop_toBottomOf="@id/serialNumberTil" />
 
 
             <EditText
@@ -103,6 +119,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
+                    android:enabled="@{viewModel.valid}"
                     android:text="Cadastrar Bicicleta"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
