--- a/app/src/main/res/layout/fragment_email_validation.xml
+++ b/app/src/main/res/layout/fragment_email_validation.xml
@@ -26,9 +26,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="96dp"
                 android:layout_marginEnd="24dp"
+                android:focusedByDefault="true"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:selectAllOnFocus="true"
+                android:text="@={viewmodel.emailField}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,25 +42,25 @@
                 android:layout_gravity="start"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="64dp"
-                android:enabled="false"
+                android:onClick="@{() -> viewmodel.sendForm()}"
                 android:text="@string/action_next"
+                android:enabled="@{viewmodel.nextButtonEnabled}"
                 app:layout_constraintEnd_toEndOf="@id/username"
                 app:layout_constraintTop_toBottomOf="@+id/username" />
 
-        <ProgressBar
+        <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="64dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
-                app:progressEnabled="@{viewmodel.progressBarEnabled}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/password"
-                app:layout_constraintStart_toStartOf="@+id/password"
+                android:scaleX="5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.3" />
+                app:layout_constraintVertical_bias="0.3"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/multi_color_progress_bar"
+                app:animationVisibility="@{viewmodel.progressBarVisible}" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
