--- a/app/src/main/res/navigation/authentication_nav_graph.xml
+++ b/app/src/main/res/navigation/authentication_nav_graph.xml
@@ -7,27 +7,28 @@
 
     <fragment
             android:id="@+id/signInFragment"
-            tools:layout="@layout/fragment_sign_in"
             android:name="app.igormatos.botaprarodar.presentation.authentication.SignInFragment"
             android:label="Entrar"
             app:defaultNavHost="true"
-            >
+            tools:layout="@layout/fragment_sign_in">
+        <argument
+                android:name="email"
+                app:argType="string" />
         <action
                 android:id="@+id/action_signInFragment_to_passwordRecoveryFragment"
                 app:destination="@id/passwordRecoveryFragment"
                 app:popUpTo="@id/signInFragment" />
     </fragment>
     <fragment
-            tools:layout="@layout/fragment_registration"
             android:id="@+id/registrationFragment"
             android:name="app.igormatos.botaprarodar.presentation.authentication.RegistrationFragment"
-            android:label="Registrar" >
-    </fragment>
+            android:label="Registrar"
+            tools:layout="@layout/fragment_registration"></fragment>
     <fragment
-            tools:layout="@layout/fragment_email_validation"
             android:id="@+id/emailValidationFragment"
             android:name="app.igormatos.botaprarodar.presentation.authentication.EmailValidationFragment"
-            android:label="Autenticação" >
+            android:label="Autenticação"
+            tools:layout="@layout/fragment_email_validation">
 
         <action
                 android:id="@+id/action_emailValidationFragment_to_registrationFragment"
@@ -36,16 +37,15 @@
         <action
                 android:id="@+id/action_emailValidationFragment_to_signInFragment"
                 app:destination="@id/signInFragment"
-                app:popUpTo="@id/emailValidationFragment" />
+                app:popUpTo="@id/emailValidationFragment">
+            <argument
+                    android:name="email"
+                    app:argType="string" />
+        </action>
     </fragment>
     <fragment
             android:id="@+id/passwordRecoveryFragment"
             android:name="app.igormatos.botaprarodar.presentation.authentication.PasswordRecoveryFragment"
             android:label="Recuperar Senha"
             tools:layout="@layout/fragment_password_recovery" />
-    <activity
-            android:id="@+id/loginActivity"
-            android:name="app.igormatos.botaprarodar.presentation.login.LoginActivity"
-            android:label="activity_login"
-            tools:layout="@layout/activity_login" />
 </navigation>
