--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,89 +1,100 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".presentation.authentication.AuthenticationActivity">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-            android:id="@+id/welcome_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/prompt_welcome_title"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-            android:id="@+id/welcome_message"
-            android:layout_width="0dp"
-            android:layout_height="53dp"
-            android:text="@string/prompt_welcome_message"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_title" />
+        <variable
+                name="viewmodel"
+                type="app.igormatos.botaprarodar.presentation.authentication.viewmodel.SignInViewModel" />
+    </data>
 
-    <EditText
-            android:id="@+id/password"
-            android:layout_width="0dp"
-            android:layout_height="53dp"
-            android:hint="@string/prompt_password"
-            android:inputType="textPassword"
-            android:selectAllOnFocus="true"
-            app:layout_constraintBottom_toTopOf="@+id/next"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".presentation.authentication.AuthenticationActivity">
 
-    <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="64dp"
-            android:enabled="false"
-            android:text="@string/action_next"
-            app:layout_constraintEnd_toEndOf="@id/password"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
+        <TextView
+                android:id="@+id/welcome_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/prompt_welcome_title"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/loading" />
 
-    <Button
-            android:id="@+id/forgotten_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="64dp"
-            android:text="@string/action_forgotten_password"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@id/password"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
+        <TextView
+                android:id="@+id/welcome_message"
+                android:layout_width="0dp"
+                android:layout_height="53dp"
+                tools:text="@string/prompt_welcome_message"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/welcome_title" />
 
-    <ProgressBar
-            android:id="@+id/loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="64dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/password"
-            app:layout_constraintStart_toStartOf="@+id/password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+                android:id="@+id/password"
+                android:layout_width="0dp"
+                android:layout_height="53dp"
+                android:hint="@string/prompt_password"
+                android:inputType="textPassword"
+                android:selectAllOnFocus="true"
+                android:text="@={viewmodel.passwordField}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/welcome_message"
+                app:onPasswordValidate="@{viewmodel.passwordField}"
+                android:singleLine="true"
+                app:onSubmitForm="@{signIn}"
+                android:autofillHints="password"
+                />
+
+        <Button
+                android:id="@+id/sign_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="64dp"
+                android:enabled="@{viewmodel.signInButtonEnabled}"
+                android:text="@string/action_sign_in"
+                app:layout_constraintEnd_toEndOf="@id/password"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <Button
+                android:id="@+id/forgotten_password"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="64dp"
+                android:text="@string/action_forgotten_password"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@id/password"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:scaleX="5"
+                app:animationVisibility="@{viewmodel.progressBarVisible}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/multi_color_progress_bar" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
