--- a/app/src/main/res/layout/fragment_return_bike_quiz.xml
+++ b/app/src/main/res/layout/fragment_return_bike_quiz.xml
@@ -35,11 +35,12 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/usedBikeToMove">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                     android:id="@+id/usedBikeToMoveSelection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
