--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="app.igormatos.botaprarodar.presentation.user.userform.UserFormViewModel" />
@@ -179,20 +180,20 @@
                     app:layout_constraintTop_toTopOf="@id/cpp_document_front_picture" />
 
                 <app.igormatos.botaprarodar.common.components.CustomEditText
-                    android:id="@+id/cet_user_age"
+                    android:id="@+id/cet_user_birthday"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_large"
-                    android:hint="@string/user_form_user_age_hint"
+                    android:hint="@string/user_form_user_birthday_hint"
                     android:inputType="number"
-                    android:label="@string/user_form_user_age_label"
+                    android:label="@string/user_form_user_birthday_label"
                     app:errorMessage="@{`add_user_invalid_age`}"
                     app:layout_constraintEnd_toStartOf="@+id/cst_user_income"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cpp_document_back_picture"
-                    app:textCaptured="@{viewModel.userAge}"
-                    app:textValue="@={viewModel.userAge}" />
+                    app:textCaptured="@{viewModel.userBirthday}"
+                    app:textValue="@={viewModel.userBirthday}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_income"
@@ -201,10 +202,10 @@
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:hint="@string/default_custom_component_select_hint"
                     android:label="@string/user_form_user_income_label"
-                    app:layout_constraintBottom_toBottomOf="@+id/cet_user_age"
+                    app:layout_constraintBottom_toBottomOf="@+id/cet_user_birthday"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/cet_user_age"
-                    app:layout_constraintTop_toTopOf="@+id/cet_user_age"
+                    app:layout_constraintStart_toEndOf="@+id/cet_user_birthday"
+                    app:layout_constraintTop_toTopOf="@+id/cet_user_birthday"
                     app:textValue="@{viewModel.userIncome}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
