--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,9 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_large">24dp</dimen>
+    <dimen name="padding_xlarge">48dp</dimen>
+    <dimen name="padding_xxlarge">56dp</dimen>
+    <dimen name="padding_xxlarge_plus">64dp</dimen>
 
     <dimen name="fragment_horizontal_margin">24dp</dimen>
     <dimen name="fragment_vertical_margin">24dp</dimen>
