--- a/app/src/main/res/layout/fragment_select_user.xml
+++ b/app/src/main/res/layout/fragment_select_user.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_medium"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:circularflow_defaultRadius="8dp"
             app:layout_constraintBottom_toTopOf="@id/userList"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,8 @@
                 android:hint="@string/search_cyclist_name"
                 android:imeActionLabel="Procurar"
                 android:imeOptions="actionSearch"
-                android:inputType="text" />
+                android:inputType="text"
+                android:visibility="gone" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +51,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tie_user_search"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_weight="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
