--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -254,6 +254,7 @@
                     android:layout_marginHorizontal="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_large"
                     android:hint="@string/user_form_user_adrees_hint"
+                    android:inputType="textPostalAddress"
                     android:label="@string/user_form_user_adrees_label"
                     app:errorMessage="@{`add_user_invalid_address`}"
                     app:layout_constraintEnd_toEndOf="parent"
